<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_70"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="76dp"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:background_color="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_login_name"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textSize="@dimen/text_size_sub_title"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:border_color="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_logo"
        />
    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:hint="@string/hint_username"
        android:textSize="@dimen/text_size_title"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toTopOf="@id/tv_login_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_name"
        app:layout_constraintLeft_toRightOf="@id/tv_login_name"
        app:layout_constraintRight_toRightOf="parent"/>
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_login_pass"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="@dimen/text_size_sub_title"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_name"
        />
    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:hint="@string/hint_password"
        android:textSize="@dimen/text_size_title"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toTopOf="@id/tv_login_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_pass"
        app:layout_constraintLeft_toRightOf="@id/tv_login_name"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/dimen_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/tv_login_pass"
        />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/register"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/tv_login_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_pass" />

    <LinearLayout
        android:id="@+id/ll_login_bu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/dimen_30"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/iv_login_bu"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_login"
            />
        <com.example.gobishops.myview.mButtonView
            android:id="@+id/bt_login_sign"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/login"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dimen_10"
            app:background_color="@color/colorPrimary"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_login_bu"
        app:layout_constraintRight_toRightOf="@id/ll_login_bu"
        >
        <ImageView
            android:id="@+id/iv_login_google"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_google"
            />
        <com.example.gobishops.myview.mButtonView
            android:id="@+id/bt_login_google"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/login_google"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dimen_10"
            app:background_color="@color/google"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_login_google"
        app:layout_constraintRight_toRightOf="@id/ll_login_google"
        >
        <ImageView
            android:id="@+id/iv_login_facebook"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_facebook"
            app:layout_constraintTop_toBottomOf="@id/iv_login_google"
            app:layout_constraintLeft_toLeftOf="@id/bt_login_sign"
            />
        <com.example.gobishops.myview.mButtonView
            android:id="@+id/bt_login_facebook"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/login_facebook"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dimen_10"
            app:border_color="@color/facebook"
            app:background_color="@color/facebook"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>