<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RegisterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_reg_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_70"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="45sp"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_80"
        app:background_color="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_reg_name"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_logo"
        />
    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:hint="@string/name"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintTop_toTopOf="@id/tv_reg_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_reg_name"
        app:layout_constraintLeft_toRightOf="@id/tv_reg_name"
        />
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_reg_pass"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_name"
        />
    <EditText
        android:id="@+id/et_reg_pwd"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:hint="@string/reg_password1"
        android:textSize="@dimen/text_size_title"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/tv_reg_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_reg_pass"
        app:layout_constraintLeft_toRightOf="@id/tv_reg_name"
        />
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_reg_pass2"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_pass"
        />
    <EditText
        android:id="@+id/et_reg_pwd2"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:hint="@string/reg_password2"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/tv_reg_pass2"
        app:layout_constraintBottom_toBottomOf="@id/tv_reg_pass2"
        app:layout_constraintLeft_toRightOf="@id/tv_reg_name"
        />
    <com.example.gobishops.myview.mButtonView
        android:id="@+id/tv_reg_pass3"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_40"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_pass2"
        />
    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:hint="@string/email"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintTop_toTopOf="@id/tv_reg_pass3"
        app:layout_constraintBottom_toBottomOf="@id/tv_reg_pass3"
        app:layout_constraintLeft_toRightOf="@id/tv_reg_name"
        />
    <TextView
        android:id="@+id/tv_reg_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/dimen_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_reg_register"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_pass3"
        />
    <TextView
        android:id="@+id/tv_reg_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/tv_reg_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_reg_forget"
        />

    <LinearLayout
        android:id="@+id/ll_reg_bu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/iv_reg_bu"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_login" />
        <com.example.gobishops.myview.mButtonView
            android:id="@+id/bt_reg_sign"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/register"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dimen_10"
            app:background_color="@color/colorPrimary"
            />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>