<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityActivity">
    <ImageButton
        android:id="@+id/btn_activity_detail_back"
        style="@style/BackButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/iv_activity_detail_portrait"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginStart="@dimen/dimen_20"
        app:layout_constraintTop_toTopOf="@+id/btn_activity_detail_back"
        app:layout_constraintLeft_toRightOf="@+id/btn_activity_detail_back"
        app:sriv_oval="true"
        />
    <TextView
        android:id="@+id/tv_activity_detail_initiator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginStart="@dimen/dimen_20"
        android:text="@string/f_user_name"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/btn_activity_detail_back"
        app:layout_constraintLeft_toRightOf="@+id/iv_activity_detail_portrait"
        />
    <ImageView
        android:id="@+id/iv_activity_detail_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/img_wolf"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintTop_toBottomOf="@+id/btn_activity_detail_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_activity_detail_time"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        android:text="@string/f_time"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintTop_toBottomOf="@+id/iv_activity_detail_image"
        app:layout_constraintLeft_toLeftOf="@+id/iv_activity_detail_image"
        />
    <TextView
        android:id="@+id/tv_activity_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        android:text="@string/f_location"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_time"
        app:layout_constraintLeft_toLeftOf="@+id/iv_activity_detail_image"
        />
    <TextView
        android:id="@+id/tv_activity_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_home_activity"
        android:padding="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_location"
        app:layout_constraintLeft_toLeftOf="@+id/iv_activity_detail_image"
        />
    <com.example.gobishop.myview.mButtonView
        android:id="@+id/btn_activity_detail_join"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        android:text="@string/join"
        android:padding="0dp"
        android:textSize="@dimen/text_size_sub_title"
        android:layout_marginTop="@dimen/dimen_30"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>